[package]
name = "bench_iter"
version = "0.1.0"
authors = ["Tomas Dvorak <dvtomas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0"

[[bench]]
name = "my_benchmark"
harness = false
